crates/sql-orm/tests/ui/entity_rowversion_invalid_type.rs
use sql_orm::prelude::*;

#[derive(Entity)]
pub struct InvalidRowVersion {
    #[orm(primary_key)]
    pub id: i64,

    #[orm(rowversion)]
    pub version: String,
}

fn main() {}
